--- a/.gitignore
+++ b/.gitignore
@@ -119,6 +119,13 @@ celerybeat.pid
 # SageMath parsed files
 *.sage.py
 
+# Example Apps
+ExampleAppAndroid/
+ExampleAppIOS/
+ExampleAppWindows/
+ExampleAppmacOS/
+ExampleAppLinux/
+
 # Environments
 .env
 .venv
